--- a/src/Passingwind.ElsaDesigner/src/pages/designer/flow.less
+++ b/src/Passingwind.ElsaDesigner/src/pages/designer/flow.less
@@ -147,7 +147,6 @@
         stroke: #ffccc7,
     }
 
-    /** 覆盖节点默认选中色 */
     &.x6-node-selected rect {
         stroke-width: 2px;
         filter: drop-shadow(2px 1px 2px #5F95FF);
@@ -199,20 +198,11 @@
         }
     }
 
-    // 交互状态
-    // &.x6-edge-selected {
-    //     path:nth-child(2) {
-    //         stroke: #1890ff;
-    //         stroke-width: 2px;
-    //     }
-    // }
-
-    // &:hover {
-    //     path:nth-child(2) {
-    //         stroke: #1890ff;
-    //         stroke-width: 2px;
-    //     }
-    // }
+    &:hover {
+        path:nth-child(2) {
+            stroke: #91d5ff;
+        }
+    }
 
     // &.hoverHighlight {
     //     path:nth-child(2) {
@@ -221,11 +211,11 @@
     //     }
     // }
 
-    /** 覆盖连线默认选中色 */
-    &.x6-edge-selected path {
-        stroke: #5F95FF;
-        stroke-width: 2px;
-        // z-index: 0;
-        filter: drop-shadow(2px 3px 3px #5F95FF1a);
+    &.x6-edge-selected {
+        path:nth-child(2) {
+            stroke: #91d5ff;
+            stroke-width: 2px;
+            filter: drop-shadow(2px 3px 3px #5F95FF1a);
+        }
     }
 }
