--- a/src/Passingwind.ElsaDesigner/src/pages/designer/index.less
+++ b/src/Passingwind.ElsaDesigner/src/pages/designer/index.less
@@ -5,3 +5,12 @@
 .title-bar {
     line-height: 32px;
 }
+
+.flow-container {
+    width: 100%;
+    height: calc(100vh - 280px);
+}
+
+// .designer {
+//     height: calc(100vh - 300px);
+// }
