--- a/src/Passingwind.ElsaDesigner/src/pages/document.ejs
+++ b/src/Passingwind.ElsaDesigner/src/pages/document.ejs
@@ -8,7 +8,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
         />
-        <title>Elsa Desinger Demo</title>
+        <title>Elsa Workflow Demo</title>
         <link
             rel="icon"
             href="<%= context.config.publicPath +'favicon.ico'%>"
@@ -207,7 +207,7 @@
                     min-height: 420px;
                 "
             >
-                <img src="<%= context.config.publicPath +'pro_icon.svg'%>" alt="logo" width="256" />
+                <!-- <img src="<%= context.config.publicPath +'pro_icon.svg'%>" alt="logo" width="256" /> -->
                 <div class="page-loading-warp">
                     <div class="ant-spin ant-spin-lg ant-spin-spinning">
                         <span class="ant-spin-dot ant-spin-dot-spin"
