optimization designer and layout

--- a/src/Passingwind.ElsaDesigner/src/pages/designer/flow.less
+++ b/src/Passingwind.ElsaDesigner/src/pages/designer/flow.less
@@ -1,15 +1,15 @@
 .flow-container {
     position: relative;
     display: flex;
-    min-height: 100px;
+    height: calc(100vh - 190px);
+    min-height: 500px;
     border: 1px solid #dfe3e8;
 
     .graph-container {
         position: relative;
         flex: 1;
-        height: 100%;
         height: calc(100% - 40px);
-        min-height: 500px;
+        min-height: 300px;
         margin-top: 40px;
     }
 
