--- a/src/Passingwind.ElsaDesigner/src/pages/designer/index.less
+++ b/src/Passingwind.ElsaDesigner/src/pages/designer/index.less
@@ -6,11 +6,7 @@
     line-height: 32px;
 }
 
-.flow-container {
-    width: 100%;
-    height: calc(100vh - 280px);
+.designer {
+    // height: calc(100vh - 170px);
+    min-height: 500px;
 }
-
-// .designer {
-//     height: calc(100vh - 300px);
-// }
