--- a/src/Passingwind.ElsaDesigner/src/pages/instance/detail.less
+++ b/src/Passingwind.ElsaDesigner/src/pages/instance/detail.less
@@ -3,5 +3,15 @@ pre {
 }
 
 .flow-container {
-    height: calc(100vh - 320px);
+    height: calc(100vh - 190px);
+    min-height: 300px;
+}
+
+.data-render-container {
+    height: calc(100vh - 190px);
+    min-height: 300px;
+}
+.activity-data-render-container {
+    height: calc(100vh - 252px);
+    min-height: 300px;
 }
