--- a/src/Passingwind.ElsaDesigner/src/global.less
+++ b/src/Passingwind.ElsaDesigner/src/global.less
@@ -3,55 +3,55 @@
 html,
 body,
 #root {
-  height: 100%;
+    height: 100%;
 }
 
 .colorWeak {
-  filter: invert(80%);
+    filter: invert(80%);
 }
 
 .ant-layout {
-  min-height: 100vh;
+    min-height: 100vh;
 }
 .ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
-  left: unset;
+    left: unset;
 }
 
 canvas {
-  display: block;
+    display: block;
 }
 
 body {
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 ul,
 ol {
-  list-style: none;
+    list-style: none;
 }
 
 @media (max-width: @screen-xs) {
-  .ant-table {
-    width: 100%;
-    overflow-x: auto;
-    &-thead > tr,
-    &-tbody > tr {
-      > th,
-      > td {
-        white-space: pre;
-        > span {
-          display: block;
+    .ant-table {
+        width: 100%;
+        overflow-x: auto;
+        &-thead > tr,
+        &-tbody > tr {
+            > th,
+            > td {
+                white-space: pre;
+                > span {
+                    display: block;
+                }
+            }
         }
-      }
     }
-  }
 }
 
 // Compatible with IE11
 @media screen and(-ms-high-contrast: active), (-ms-high-contrast: none) {
-  body .ant-design-pro > .ant-layout {
-    min-height: 100vh;
-  }
+    .ant-design-pro > .ant-layout {
+        min-height: 100vh;
+    }
 }
