--- a/src/Passingwind.ElsaDesigner/src/pages/designer/flow.less
+++ b/src/Passingwind.ElsaDesigner/src/pages/designer/flow.less
@@ -52,8 +52,8 @@
                         // height: 30px;
                         line-height: 30px;
                         text-align: center;
-                        background: rgb(239, 244, 255);
-                        border: 1px solid rgb(95, 149, 255);
+                        background: #e6f7ff;
+                        border: 1px solid #91d5ff;
                         border-radius: 4px;
                     }
                 }
