--- a/src/Passingwind.ElsaDesigner/src/pages/document.ejs
+++ b/src/Passingwind.ElsaDesigner/src/pages/document.ejs
@@ -8,7 +8,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
         />
-        <title>Workflow Demo</title>
+        <title>Workflow</title>
         <link
             rel="icon"
             href="<%= context.config.publicPath +'favicon.ico'%>"
