💡 make variables editable as standalone items

--- a/src/Passingwind.ElsaDesigner/src/global.less
+++ b/src/Passingwind.ElsaDesigner/src/global.less
@@ -59,3 +59,10 @@ ol {
 .ant-pro-card-statistic-status {
     margin-right: 10px;
 }
+
+.monaco-editor-container {
+    position: relative;
+    margin: 0 1px;
+    border: 1px solid #d9d9d9;
+    border-radius: 2px;
+}
